--- a/AmphiprionCMS/Content/admin.css
+++ b/AmphiprionCMS/Content/admin.css
@@ -4,10 +4,12 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    padding-top: 50px;
-    background-color: #f5f5f5;
+    padding-top: 60px;
+    background-color: #333;
 }
-
+.navbar {
+    min-height: 60px;
+}
 
 /*
  * Global add-ons
@@ -38,14 +40,16 @@ body {
     .nav-sidebar > li > a {
         padding-right: 20px;
         padding-left: 20px;
+        color: #999999;
     }
 
-    .nav-sidebar > .active > a {
+    .nav-sidebar > .active > a,  .nav-sidebar > .active > a:hover {
         color: #fff;
-        background-color: #428bca;
+        background-color: #e47e39;
     }
       .nav > li > a:hover,.nav > li a:focus {
-          background-color:#333
+          background-color: #333;
+          color:#fff;
       }
 
 /*
@@ -53,7 +57,7 @@ body {
  */
 
 .main {
-    padding: 20px;
+    padding: 30px;
 }
 
 
@@ -102,12 +106,16 @@ border-left: 3px solid #eee;
         border-radius: 50%;
     }
 /************************************************/
-
+a.navbar-brand-icon{ float: left;padding: 0 15px;}
 .selected {
     background: #dcdcdc;
 }
-
-
+.green {
+    color: #009900;
+}
+.tree li a.preview {
+    border: none;color: #000;
+}
 footer {
     padding-left: 15px;
     padding-right: 15px;
@@ -115,26 +123,6 @@ footer {
 }
 
 
-
-
-
-/* Sidebar navigation */
-.nav-sidebar {
-    background-color: #f5f5f5;
-    margin-right: -15px;
-    margin-bottom: 20px;
-    margin-left: -15px;
-}
-
-    .nav-sidebar > li > a {
-        padding-right: 20px;
-        padding-left: 20px;
-    }
-
-    .nav-sidebar > .active > a {
-        color: #fff;
-        background-color: #666666;
-    }
 
 i.glyphicon, i[class*='icon-'] {
     margin-right: 8px;
