--- a/AmphiprionCMS/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/AmphiprionCMS/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -78,15 +78,12 @@
                        @RenderBody()
                     </div>
 
-                    <hr>
-
-
                 </div><!--/row-->
             </div>
         </div><!--/.container-->
 
-        <footer>
-            <p class="pull-right">©2014 Company</p>
+        <footer class="clearfix">
+            <p class="pull-right">©2014 aeroKnotic Software. All Rights Reserved.  Amphiprion CMS is released under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
         </footer>
 
 
