--- a/AmphiprionCMS/Content/admin.css
+++ b/AmphiprionCMS/Content/admin.css
@@ -19,7 +19,29 @@ body {
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
-
+.backdrop {
+    position:fixed;
+    z-index:1060;
+    top:0;
+    right:0;
+    left:0;
+    bottom:0;
+    opacity:.5;
+    background-color:#000;
+}
+.backdrop-spinner{
+    background: #ffffff url('images/spinner.gif') no-repeat center center;
+    position:fixed;
+    padding: 25px;
+    border-radius: 10px;
+    right:0;
+    left:0;
+    margin:0 auto;
+    min-height:40px;
+    width: 40px;
+    z-index: 1061;
+             top:20%;
+}
 
 /*
  * Sidebar
@@ -119,7 +141,7 @@ a.navbar-brand-icon{ float: left;padding: 0 15px;}
 footer {
     padding-left: 15px;
     padding-right: 15px;
-    background-color: #fff;
+    color: #ffffff;
 }
 
 
