Moved and Fixed File Browser, Added Settings Management

--- a/AmphiprionCMS/Areas/AmpAdministration/Views/File/Browser.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/File/Browser.cshtml
@@ -10,8 +10,7 @@
     
     <meta name="viewport" content="width=device-width" />
     <title>View1</title>
-    <link href="~/Content/filebrowser.css" rel="stylesheet" />
-    @Styles.Render("~/Content/icons")
+    <link href="~/AmphiprionCMS/Content/filebrowser.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/jquery")
     <script type="text/javascript">
         function getUrlParam(paramName) {
