--- a/AmphiprionCMS/Areas/AmpAdministration/Views/Shared/EditorTemplates/Html.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/Shared/EditorTemplates/Html.cshtml
@@ -5,9 +5,9 @@
     $(function() {
         $('#@(ViewData.ModelMetadata.PropertyName)').ckeditor(
             {
-                filebrowserImageBrowseUrl: '@Url.Content("~/file/browser?t=images")',
-                filebrowserUploadUrl: '@Url.Content("~/file/upload")',
-                filebrowserBrowseUrl: '@Url.Content("~/file/browser?t=all")',
+                filebrowserImageBrowseUrl: '@Url.Content("~/amp-admin/file/browser?t=images")',
+                filebrowserUploadUrl: '@Url.Content("~/amp-admin/file/upload")',
+                filebrowserBrowseUrl: '@Url.Content("~/amp-admin/file/browser?t=all")',
                 filebrowserWindowWidth : 500,
                 filebrowserWindowHeight : 400
             });
