--- a/AmphiprionCMS/Areas/AmpAdministration/Views/Shared/_Layout.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using AmphiprionCMS.Components
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -33,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand-icon"><img width="50" height="50" src="@Url.Content("~/amphiprioncms/content/images/amp150.png")"/></a><a class="navbar-brand" href="#">Project name</a>
+                    <a href="@Url.Action("Index","Home",new{area="AmpAdministration"})" class="navbar-brand-icon"><img width="50" height="50" src="@Url.Content("~/amphiprioncms/content/images/amp150.png")"/></a><a class="navbar-brand" href="@SiteSettings.Current.SiteUrl">@SiteSettings.Current.SiteName</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -59,7 +60,7 @@
                         <li class="active"><a href="#">Dashboard</a></li>
                         <li class="pages">@Html.ActionLink("Pages","List","PageAdmin",null,new{name="pages",id = "pages"})</li>
                         <li><a href="#">Users</a></li>
-                        <li><a href="#">Settings</a></li>
+                        <li class="settings">@Html.ActionLink("Settings", "Settings","AmpSettings", null, new { name = "settings", id = "settings" })</li>
                     </ul>
                     
 
