Lots of cool stuff

--- a/AmphiprionCMS/Areas/AmpAdministration/Views/Account/Login.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model AmphiprionCMS.Areas.Administration.Models.LoginViewModel
+﻿@model AmphiprionCMS.Areas.AmpAdministration.Models.LoginViewModel
 
 @{
     ViewBag.Title = "Log in";
