--- a/AmphiprionCMS/AmphiprionCMS/Content/admin.css
+++ b/AmphiprionCMS/AmphiprionCMS/Content/admin.css
@@ -279,7 +279,23 @@ ul.tree-legend li span {
 .date-group, .time-group {
     padding: 4px 0px;
 }
-
+.navbar-inverse .navbar-nav li a.logout-link{ 
+    color: #999;
+    line-height: 20px;
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+.navbar-inverse .navbar-nav li a.logout-link:hover {
+    text-decoration: none;
+    color: #ffffff;
+}
+@media (min-width: 768px) {
+.navbar-inverse .navbar-nav li a.logout-link {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+}
 @media screen and (max-width: 768px) {
 
     .main {
@@ -322,4 +338,5 @@ ul.tree-legend li span {
         background-color: #f5f5f5;
         border-right: 1px solid #eee;
     }
+   
 }
