--- a/AmphiprionCMS/Areas/AmpAdministration/Views/PageAdmin/List.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/PageAdmin/List.cshtml
@@ -41,11 +41,26 @@
         @if (hasChildren)
         {
             <i class="icon-minus expand" title="Expand this branch"></i>
-        }<span data-id="@root.Id" data-title="@root.Title" ><i class="@(hasChildren?"icon-copy3": "icon-file4")"></i>@root.Title (@root.Slug)</span>
-        <a href="@Url.Action("Edit","Page",new {id=root.Id})" class="edit-page toggle" style="display:none;"><i class="icon-pencil"></i>Edit</a>
-        @if (!root.IsHomepage && !hasChildren)
+        }
+        @if (root.IsHomepage)
         {
-            <a href="#" class="delete-page toggle red" data-id="@root.Id" style="display: none;"><i class="icon-close"></i>Delete</a>
+             <span data-id="@root.Id" data-title="Root" ><i class="@(hasChildren?"icon-copy3": "icon-file4")"></i>Root</span>
+        }
+        else
+        {
+             <span data-id="@root.Id" data-title="@root.Title" ><i class="@(hasChildren?"icon-copy3": "icon-file4")"></i>@root.Title (@root.Slug)</span>
+        }
+        
+        
+      
+        @if (!root.IsHomepage)
+        {
+             <a href="@Url.Action("Edit","Page",new {id=root.Id})" class="edit-page toggle" style="display:none;"><i class="icon-pencil"></i>Edit</a>
+            if (!hasChildren)
+             {
+                   <a href="#" class="delete-page toggle red" data-id="@root.Id" style="display: none;"><i class="icon-close"></i>Delete</a>
+             }
+          
         }
 
         <a href="@Url.Content(string.IsNullOrEmpty(root.Path)?"~/":"~" + root.Path)"><i class="icon-eye" title="View Page"></i>View</a>
