--- a/AmphiprionCMS/Areas/AmpAdministration/Views/PageAdmin/List.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/PageAdmin/List.cshtml
@@ -26,6 +26,9 @@
             <li>
                 <i class="icon-clock"></i><span>Published for a future date</span>
             </li>
+            <li>
+                <i class="icon-home"></i><span>Set as Home Page</span>
+            </li>
         </ul>
         <p class="well">
             ***You can only delete pages without children.  To delete a page with children, first relocate the children to another parent page. <br/><strong>WARNING:</strong>Deleting or changing the parent of an object will make the page no longer available to users who may have bookmarked it.
