--- a/NuGet/Areas/AmpAdministration/Views/Shared/_Layout.cshtml
+++ b/NuGet/Areas/AmpAdministration/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="@Url.Action("Index","Home",new{area="AmpAdministration"})" class="navbar-brand-icon"><img width="50" height="50" src="@Url.Content("~/amphiprioncms/content/images/amp150.png")"/></a><a class="navbar-brand" href="@SiteSettings.Current.SiteUrl">@SiteSettings.Current.SiteName</a>
+                    <a href="@Url.Action("Index","AmpHome",new{area="AmpAdministration"})" class="navbar-brand-icon"><img width="50" height="50" src="@Url.Content("~/amphiprioncms/content/images/amp150.png")"/></a><a class="navbar-brand" href="@SiteSettings.Current.SiteUrl">@SiteSettings.Current.SiteName</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -43,7 +43,7 @@
                         <li>
                             @if (AmphiprionCMS.Components.Authentication.Authentication.Current.IsAuthenticated)
                             {
-                                using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new {id = "logoutForm", @class = "navbar-right"}))
+                                using (Html.BeginForm("LogOff", "AmpAccount", FormMethod.Post, new {id = "logoutForm", @class = "navbar-right"}))
                                 {
                                     @Html.AntiForgeryToken()
                                     <a class="logout-link" href="javascript:document.getElementById('logoutForm').submit()">Log off @AmphiprionCMS.Components.Authentication.Authentication.Current.CurrentUser.UserName</a>
