--- a/AmphiprionCMS/Views/AmpSiteSetup/Setup.cshtml
+++ b/AmphiprionCMS/Views/AmpSiteSetup/Setup.cshtml
@@ -62,6 +62,19 @@
                             @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Password)
                         </div>
+                    </div>    
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.ExecuteSql, new { @class = "control-label col-md-5" })
+                       
+                        <div class="col-md-7">
+                           
+                            @Html.CheckBoxFor(model => model.ExecuteSql, new { }) <a class="btn" href="@Url.Action("DownloadSQL","AmpSiteSetup")">Download SQL</a>
+                            <p>
+                                Automatically execute the database install script.  Requires DBO rights.
+                            </p>
+                            @Html.ValidationMessageFor(model => model.ExecuteSql)
+                           
+                        </div>
                     </div>        
                     <div class="form-group clearfix">
                         <div class="pull-right">
