--- a/AmphiprionCMS/Views/AmpPage/Page.cshtml
+++ b/AmphiprionCMS/Views/AmpPage/Page.cshtml
@@ -1,5 +1,8 @@
 ﻿@using AmphiprionCMS.Components
 @model AmphiprionCMS.Models.ContentPage
+          @{
+              Layout = Layout = Request.IsAjaxRequest() ? null :AmphiprionCMSInitializer.Configuration.Layout;
+          }
 @section rawHeader{
     @if (!string.IsNullOrEmpty(Model.Page.MetaDescription))
     {
@@ -12,11 +15,7 @@
 }
 <div class="page-container">
     <h1>@Model.Page.Title</h1>
-    <ul>
-        <li>
-            @Html.ActionLink("Edit","Edit",new{controller="PageAdmin",area="Administration",id=Model.Page.Id.Value})
-        </li>
-    </ul>
+   
     <div class="ugc">
        @Html.Raw(Model.Page.HtmlDescription)
     </div>
