--- a/NuGet/Areas/AmpAdministration/Views/AmpSettings/settings.cshtml
+++ b/NuGet/Areas/AmpAdministration/Views/AmpSettings/settings.cshtml
@@ -113,5 +113,5 @@
     });
 </script>
 @section scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/amphiprion/jqueryval")
 }
