--- a/NuGet/Areas/AmpAdministration/Views/PageAdmin/AddEdit.cshtml
+++ b/NuGet/Areas/AmpAdministration/Views/PageAdmin/AddEdit.cshtml
@@ -15,5 +15,5 @@
    
     @Scripts.Render("~/bundles/amphiprion/editor")
     @Scripts.Render("~/bundles/amphiprion/adapter")
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/amphiprion/jqueryval")
 }
