--- a/NuGet/Areas/AmpAdministration/Views/Shared/_Layout.cshtml
+++ b/NuGet/Areas/AmpAdministration/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.PageTitle </title>
     @Styles.Render("~/Content/amphiprion/css")
     @Styles.Render("~/Content/amphiprion/admin/css")
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/amphiprion/jquery")
     @Scripts.Render("~/bundles/amphiprion/bootstrap")
     @Scripts.Render("~/bundles/amphiprion/application")
     <script type="text/javascript">
