--- a/AmphiprionCMS/Views/AmpSiteSetup/Setup.cshtml
+++ b/AmphiprionCMS/Views/AmpSiteSetup/Setup.cshtml
@@ -1,5 +1,5 @@
 ﻿@model AmphiprionCMS.Models.SetupModel
-
+@using System.Web.Optimization 
 @{
     Layout = null;
 }
@@ -89,8 +89,8 @@
 
 
     </div>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/amphiprion/jquery")
+    @Scripts.Render("~/bundles/amphiprion/jqueryval")
     @Scripts.Render("~/bundles/amphiprion/bootstrap")
 </body>
 </html>
