--- a/AmphiprionCMS/Areas/AmpAdministration/Views/PageAdmin/List.cshtml
+++ b/AmphiprionCMS/Areas/AmpAdministration/Views/PageAdmin/List.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Data.Entity.ModelConfiguration.Conventions
-@using System.Drawing
-@using AmphiprionCMS.Areas.AmpAdministration.Models
+﻿@using AmphiprionCMS.Areas.AmpAdministration.Models
 @model AmphiprionCMS.Areas.AmpAdministration.Models.PageHierarchyModel[]
 @{
     ViewBag.PageTitle = "Pages";
