--- a/NuGet/Areas/AmpAdministration/Views/AmpFile/Browser.cshtml
+++ b/NuGet/Areas/AmpAdministration/Views/AmpFile/Browser.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>View1</title>
     <link href="~/AmphiprionCMS/Content/filebrowser.css" rel="stylesheet" />
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/amphiprion/jquery")
     <script type="text/javascript">
         function getUrlParam(paramName) {
             var reParam = new RegExp('(?:[\?&]|&)' + paramName + '=([^&]+)', 'i');
